Changed hosts to db from web

--- a/playbooks/deploy_mongodb_playbook.yaml
+++ b/playbooks/deploy_mongodb_playbook.yaml
@@ -1,6 +1,6 @@
 ---
 - name: Deploy MongoDB instance
-  hosts: web
+  hosts: db
   become: true
   tasks:
     - name: Import MongoDB public GPG key
